--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+# Nome da aplicação
 spring.application.name=bank
+
+# Porta do servidor
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/bank
+# Configurações de conexão com o PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,6 +14,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Outras configs úteis
 spring.jpa.generate-ddl=true
